--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: angine04 # Your GitHub organization or username, where this repository li
 repo: uptime # The name of this repository
 
 sites:
-  - name: Angine\u0027s Blog
+  - name: Angine's Blog
     url: https://angine.tech
   - name: Comments System
     url: https://comments.angine.tech
